Increase quotas for testing.

--- a/services/service_config.json
+++ b/services/service_config.json
@@ -1,39 +1,39 @@
 {
   "slow_vis": {
-    "1":  {"ip": "10.41.0.76", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data01/pipeline/log"},
-    "2":  {"ip": "10.41.0.76", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data01/pipeline/log"},
-    "3":  {"ip": "10.41.0.77", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data02/pipeline/log"},
-    "4":  {"ip": "10.41.0.77", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data02/pipeline/log"},
-    "5":  {"ip": "10.41.0.78", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data03/pipeline/log"},
-    "6":  {"ip": "10.41.0.78", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data03/pipeline/log"},
-    "7":  {"ip": "10.41.0.79", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data04/pipeline/log"},
-    "8":  {"ip": "10.41.0.79", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data04/pipeline/log"},
-    "9":  {"ip": "10.41.0.80", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data05/pipeline/log"},
-    "10": {"ip": "10.41.0.80", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data05/pipeline/log"},
-    "11": {"ip": "10.41.0.81", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data06/pipeline/log"},
-    "12": {"ip": "10.41.0.81", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data06/pipeline/log"},
-    "13": {"ip": "10.41.0.82", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data07/pipeline/log"},
-    "14": {"ip": "10.41.0.82", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data07/pipeline/log"},
-    "15": {"ip": "10.41.0.83", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data08/pipeline/log"},
-    "16": {"ip": "10.41.0.83", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1d", "logdir": "/data08/pipeline/log"}
+    "1":  {"ip": "10.41.0.76", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data01/pipeline/log"},
+    "2":  {"ip": "10.41.0.76", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data01/pipeline/log"},
+    "3":  {"ip": "10.41.0.77", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data02/pipeline/log"},
+    "4":  {"ip": "10.41.0.77", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data02/pipeline/log"},
+    "5":  {"ip": "10.41.0.78", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data03/pipeline/log"},
+    "6":  {"ip": "10.41.0.78", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data03/pipeline/log"},
+    "7":  {"ip": "10.41.0.79", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data04/pipeline/log"},
+    "8":  {"ip": "10.41.0.79", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data04/pipeline/log"},
+    "9":  {"ip": "10.41.0.80", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data05/pipeline/log"},
+    "10": {"ip": "10.41.0.80", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data05/pipeline/log"},
+    "11": {"ip": "10.41.0.81", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data06/pipeline/log"},
+    "12": {"ip": "10.41.0.81", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data06/pipeline/log"},
+    "13": {"ip": "10.41.0.82", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data07/pipeline/log"},
+    "14": {"ip": "10.41.0.82", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data07/pipeline/log"},
+    "15": {"ip": "10.41.0.83", "port": 10001, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data08/pipeline/log"},
+    "16": {"ip": "10.41.0.83", "port": 10002, "directory": "/lustre/pipeline/slow", "quota": "1w", "logdir": "/data08/pipeline/log"}
   },
   "fast_vis": {
-    "1":  {"ip": "10.41.0.76", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data01/pipeline/log"},
-    "2":  {"ip": "10.41.0.76", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data01/pipeline/log"},
-    "3":  {"ip": "10.41.0.77", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data02/pipeline/log"},
-    "4":  {"ip": "10.41.0.77", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data02/pipeline/log"},
-    "5":  {"ip": "10.41.0.78", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data03/pipeline/log"},
-    "6":  {"ip": "10.41.0.78", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data03/pipeline/log"},
-    "7":  {"ip": "10.41.0.79", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data04/pipeline/log"},
-    "8":  {"ip": "10.41.0.79", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data04/pipeline/log"},
-    "9":  {"ip": "10.41.0.80", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data05/pipeline/log"},
-    "10": {"ip": "10.41.0.80", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data05/pipeline/log"},
-    "11": {"ip": "10.41.0.81", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data06/pipeline/log"},
-    "12": {"ip": "10.41.0.81", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data06/pipeline/log"},
-    "13": {"ip": "10.41.0.82", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data07/pipeline/log"},
-    "14": {"ip": "10.41.0.82", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data07/pipeline/log"},
-    "15": {"ip": "10.41.0.83", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data08/pipeline/log"},
-    "16": {"ip": "10.41.0.83", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "4:00", "logdir": "/data08/pipeline/log"}
+    "1":  {"ip": "10.41.0.76", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data01/pipeline/log"},
+    "2":  {"ip": "10.41.0.76", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data01/pipeline/log"},
+    "3":  {"ip": "10.41.0.77", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data02/pipeline/log"},
+    "4":  {"ip": "10.41.0.77", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data02/pipeline/log"},
+    "5":  {"ip": "10.41.0.78", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data03/pipeline/log"},
+    "6":  {"ip": "10.41.0.78", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data03/pipeline/log"},
+    "7":  {"ip": "10.41.0.79", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data04/pipeline/log"},
+    "8":  {"ip": "10.41.0.79", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data04/pipeline/log"},
+    "9":  {"ip": "10.41.0.80", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data05/pipeline/log"},
+    "10": {"ip": "10.41.0.80", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data05/pipeline/log"},
+    "11": {"ip": "10.41.0.81", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data06/pipeline/log"},
+    "12": {"ip": "10.41.0.81", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data06/pipeline/log"},
+    "13": {"ip": "10.41.0.82", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data07/pipeline/log"},
+    "14": {"ip": "10.41.0.82", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data07/pipeline/log"},
+    "15": {"ip": "10.41.0.83", "port": 11001, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data08/pipeline/log"},
+    "16": {"ip": "10.41.0.83", "port": 11002, "directory": "/lustre/pipeline/fast", "quota": "2d", "logdir": "/data08/pipeline/log"}
     },
   "power_beams": {
     "1":  {"ip": "10.41.0.76", "port": 20001, "directory": "/lustre/pipeline/beam01", "quota": "500GB", "logdir": "/data01/pipeline/log"},
