--- a/docs/.rtd_environment.yaml
+++ b/docs/.rtd_environment.yaml
@@ -18,7 +18,7 @@ dependencies:
   - pip:
     - etcd3
     - "git+https://github.com/dsa110/dsa110-pyutils"
-    - "git+https://github.com/ovro-lwa/mnc_python"
+    - "git+https://github.com/ovro-lwa/mnc_python@0.8.12"
     - "git+https://github.com/ovro-lwa/lwa-antpos@0.6.10"
     - pint
     - "git+https://github.com/ledatelescope/bifrost@pip-bootstrap#subdirectory=python"
