--- a/docs/.rtd_environment.yaml
+++ b/docs/.rtd_environment.yaml
@@ -17,7 +17,7 @@ dependencies:
   - setuptools_scm
   - pip:
     - etcd3
-    - "git+https://github.com/dsa110/dsa110-pyutils@v3.8.2"
+    - "git+https://github.com/dsa110/dsa110-pyutils"
     - "git+https://github.com/ovro-lwa/mnc_python@0.8.12"
     - "git+https://github.com/ovro-lwa/lwa-antpos@0.6.10"
     - pint
