--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -16,8 +16,8 @@ build:
   jobs:
     post_checkout:
       - git submodule init
-      - get submodule update
-    post_create_environment
+      - git submodule update
+    post_create_environment:
       - bash ./docs/bifrost_helper.sh
   
 conda:
