--- a/docs/.rtd_environment.yaml
+++ b/docs/.rtd_environment.yaml
@@ -20,6 +20,6 @@ dependencies:
     - "git+https://github.com/dsa110/dsa110-pyutils@v3.8.2"
     - "git+https://github.com/ovro-lwa/mnc_python@0.8.12"
     - "git+https://github.com/ovro-lwa/lwa-antpos@0.6.10"
-    - "git+https://github.com/ovro-lwa/lwa-pyutils@v1.4.5
+    - "git+https://github.com/ovro-lwa/lwa-pyutils@v1.4.5"
     - pint
     - "git+https://github.com/realtimeradio/caltech-bifrost-dsp#subdirectory=pipeline-control"
