What about this to make DsaSyslogger happy?

--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -15,6 +15,8 @@ build:
   tools:
     python: "mambaforge-22.9"
   jobs:
+    post_system_dependencies:
+      - bash ./docs/.rtd_rsyslog_helper.sh
     post_checkout:
       - git submodule init
       - git submodule update
