--- a/docs/.rtd_environment.yaml
+++ b/docs/.rtd_environment.yaml
@@ -21,5 +21,6 @@ dependencies:
     - "git+https://github.com/ovro-lwa/mnc_python@0.8.12"
     - "git+https://github.com/ovro-lwa/lwa-antpos@0.6.10"
     - "git+https://github.com/ovro-lwa/lwa-pyutils@v1.4.5"
+    - "git+https://github.com/ovro-lwa/lwa-observing@0.2.0"
     - pint
     - "git+https://github.com/realtimeradio/caltech-bifrost-dsp#subdirectory=pipeline-control"
