--- a/services/dr-vslow-base.service
+++ b/services/dr-vslow-base.service
@@ -16,6 +16,7 @@ ExecStartPre=/bin/bash -c '[ -d {{ logdir }} ] || mkdir -p {{ logdir }}'
 
 # Setup the environment
 Environment=PYTHONUNBUFFERED=1
+Environment=LD_LIBRARY_PATH={{ anaconda }}/lib
 
 ExecStart=/bin/bash -ec '\
 source {{ anaconda }}/bin/activate {{ condaenv }} && \
