--- a/services/dr-manager-vfast-base.service
+++ b/services/dr-manager-vfast-base.service
@@ -16,9 +16,10 @@ ExecStartPre=/bin/bash -c '[ -d {{ logdir }} ] || mkdir -p {{ logdir }}'
 
 # Setup the environment
 Environment=PYTHONUNBUFFERED=1
+Environment=LD_LIBRARY_PATH={{ anaconda }}/{{ condaenv }}/lib
 
 ExecStart=/bin/bash -ec '\
-source {{ anaconda }}/bin/activate {{ condaenv }} && \
+source {{ anaconda }}/{{ condaenv }}/bin/activate && \
 python3 {{ path }}/dr_manager_visibilities.py \
          --band-id  {{ band_id }} \
          --quick \
