--- a/services/dr-vslow-base.service
+++ b/services/dr-vslow-base.service
@@ -16,10 +16,10 @@ ExecStartPre=/bin/bash -c '[ -d {{ logdir }} ] || mkdir -p {{ logdir }}'
 
 # Setup the environment
 Environment=PYTHONUNBUFFERED=1
-Environment=LD_LIBRARY_PATH={{ anaconda }}/lib
+Environment=LD_LIBRARY_PATH={{ anaconda }}/{{ condaenv }}/lib
 
 ExecStart=/bin/bash -ec '\
-source {{ anaconda }}/bin/activate {{ condaenv }} && \
+source {{ anaconda }}/{{ condaenv }}/bin/activate && \
 python3 {{ path }}/dr_visibilities.py \
          --address                {{ address }} \
          --port                   {{ port }} \
