dr-tengine and dr-vbeam are mutually exclusive.

--- a/services/dr-tengine-base.service
+++ b/services/dr-tengine-base.service
@@ -2,6 +2,7 @@
 Description=OVRO-LWA Voltage Beam T-Engine/Recorder
 After=network-online.target
 Wants=network-online.target
+Conflicts=dr-vbeam.service
 
 [Service]
 # Allow unlimited locked memory
