fix for zmq streaming during deployment

--- a/services/dr-beam-base.service
+++ b/services/dr-beam-base.service
@@ -30,6 +30,7 @@ python3 {{ path }}/dr_beam.py \
          --beam                   {{ beam }} \
          --cores                  {{ cores }} \
          --swmr \
+	 --streaming-port	  {{ streaming_port }} \
          --record-directory       {{ directory }} \
          --record-directory-quota {{ quota }} \
          --logfile                {{ logdir }}/dr-beam-{{ beam }}.%H.log'
